k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: re-script
  labels:
    name: re-script
    app.kubernetes.io/name: re-script
    app.kubernetes.io/version: "2.1.0"
